[gd_scene load_steps=3 format=3 uid="uid://bfdh7is0ecvsp"]

[ext_resource type="Script" path="res://main_menu_singleplayer.gd" id="1_jda6g"]

[sub_resource type="LabelSettings" id="LabelSettings_jucek"]
font_size = 64

[node name="MainMenuSingleplayer" type="CanvasLayer"]
script = ExtResource("1_jda6g")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -330.0
offset_top = 150.0
offset_right = 330.0
offset_bottom = 238.0
grow_horizontal = 2
text = "Singleplayer"
label_settings = SubResource("LabelSettings_jucek")
horizontal_alignment = 1

[node name="ShootingRangeButton" type="Button" parent="."]
custom_minimum_size = Vector2(250, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 350.0
offset_right = 75.0
offset_bottom = 410.0
grow_horizontal = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../BackButton")
focus_neighbor_bottom = NodePath("../SmallHouseButton")
theme_override_font_sizes/font_size = 32
text = "Shooting range"

[node name="SmallHouseButton" type="Button" parent="."]
custom_minimum_size = Vector2(250, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_top = 472.0
offset_right = 125.0
offset_bottom = 532.0
grow_horizontal = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../ShootingRangeButton")
focus_neighbor_bottom = NodePath("../BackButton")
theme_override_font_sizes/font_size = 32
text = "Small house"

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(250, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_top = 592.0
offset_right = 125.0
offset_bottom = 652.0
grow_horizontal = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../SmallHouseButton")
focus_neighbor_bottom = NodePath("../ShootingRangeButton")
theme_override_font_sizes/font_size = 32
text = "Back"

[connection signal="pressed" from="ShootingRangeButton" to="." method="_on_shooting_range_button_pressed"]
[connection signal="pressed" from="SmallHouseButton" to="." method="_on_small_house_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
